--- a/GestionActividades/templates/GestionActividades/GruposActividades/index.html
+++ b/GestionActividades/templates/GestionActividades/GruposActividades/index.html
@@ -53,7 +53,7 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-4">
-                                                    {% select_tag contratos 'contratos_id' 'Seleccione un contrato' texto_label="Contrato" required="" value="" invalido='' mensaje_validacion='Por favor seleccione un contrato' %}
+                                                    {% select_tag lista_contratos_selector 'contratos_id' 'Seleccione un contrato' texto_label="Contrato" required="" value="" invalido='' mensaje_validacion='Por favor seleccione un contrato' %}
                                                 </div>
                                                 <div class="col-md-4">
                                                     {% select_tag colaboradores 'colaboradores_id' 'Seleccione un colaborador' texto_label="colaborador" required="" value='' invalido='' mensaje_validacion='Por favor seleccione un colaborador' %}
