EVA-237 fix: modificaciones en los view, templates y Js de los grupos y las actividades.
-Adición del icono y la indicación de cargar archivos para la ventana del Dropzone en el modal de soportes.
-Corrección de las horas (decimales) en el campo de tiempo estimado en el modal crear-editar actividad.
-Corrección realizada para mostrar en el menu lateral del modulo GA la opción visual que indica en que opción se encuentra el usuario.
-Eliminación del código que no esta haciendo nada en el Js de actividades y grupos de actividades.
-Uso del get_xa_select_activos() para reducir lineas de código aplicando el mismo resultado.
-Corrección en el view de actividades para solo mostrar colaboradores en los selectores de "supervisor" y "responsables" en los modales.
-Corrección de la función general para ocultar y mostrar campos.
-Corrección del filtro de colaboradores en los grupos de actividades que no servia.
-mostrar el nombre del colaborador que hizo la actualización de la actividad en las tarjetas de avances.
-Corrección de la función cuando se llama asi mismo el modelo ResponsableActividad.

--- a/GestionActividades/templates/GestionActividades/Actividades/Index.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/Index.html
@@ -302,7 +302,11 @@
                                                                                                                 <a class="fs-lg text-dark" >
                                                                                                                     Responsable:
                                                                                                                 </a>
-                                                                                                                {{ avance.responsable_id }}
+                                                                                                                {% for colaborador in colaboradores %}
+                                                                                                                    {% if colaborador.id == avance.responsable_id %}
+                                                                                                                        {{ colaborador.first_name}} {{colaborador.last_name}}
+                                                                                                                    {% endif %}
+                                                                                                                {% endfor %}
                                                                                                                 <br><br>
                                                                                                             </div>
                                                                                                         </div>
