--- a/GestionActividades/templates/GestionActividades/Actividades/_cargar_editar_soportes_modal.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/_cargar_editar_soportes_modal.html
@@ -27,7 +27,11 @@
                                 <div class="panel-container show">
                                     <div class="panel-content">
                                         <div id="dZUpload" class="dropzone">
-                                              <div class="dz-default dz-message"></div>
+                                              <div class="dz-default dz-message">
+                                                  <i class="fal fa-cloud-upload color-primary-600 mb-3"></i> <br>
+                                                  <span class="text-uppercase text-muted fs-md">arrastre los archivos aquí o presione click para cargarlos</span>
+                                              </div>
+
                                         </div>
 {#                                        {% input_file_tag 'archivo' 'Archivo' placeholder="Seleccione un archivo" required="" invalido=errores.logo accept=".docx, .pptx, .xlsx, .xlsm, .pdf, .dwg" mensaje_validacion='Por favor seleccione un archivo'%}#}
                                     </div>
