--- a/GestionActividades/templates/GestionActividades/_common/menu_aplicacion.html
+++ b/GestionActividades/templates/GestionActividades/_common/menu_aplicacion.html
@@ -1,17 +1,17 @@
 {% if perms.GestionActividades.view_grupoactividad %}
-    <li {% if menu_actual == 'Grupos Actividades' %} class="active" {% endif %}>
-        <a href="{% url 'GestionActividades:grupos-actividades-index' %}" title="Grupo Actividades" data-filter-tags="grupos actividades">
+    <li {% if menu_actual == 'grupos-actividades' %} class="active" {% endif %}>
+        <a href="{% url 'GestionActividades:grupos-actividades-index' %}" title="Grupo Actividades" data-filter-tags="grupos-actividades">
             <i class="fal fa-calendar-alt"></i>
-            <span class="nav-link-text" data-i18n="nav.gestionactividades_grupos-actividades">Grupos Actividades</span>
+            <span class="nav-link-text" data-i18n="nav.gestion_actividades_grupos-actividades">Grupos Actividades</span>
         </a>
     </li>
 {% endif%}
 {% if perms.GestionActividades.view_actividad %}
-<li  {% if menu_actual == 'Actividades' %} class="active" {% endif %}>
-    <a href="{% url 'GestionActividades:actividades-index'%}" title="Actividades" data-filter-tags="Actividades">
-        <i class="fal fa-clipboard-check"></i>
-        <span class="nav-link-text" data-i18n="nav.gestionactividades_actividades">Actividades</span>
-    </a>
-</li>
+    <li  {% if menu_actual == 'actividades' %} class="active" {% endif %}>
+        <a href="{% url 'GestionActividades:actividades-index' %}" title="Actividades" data-filter-tags="actividades">
+            <i class="fal fa-clipboard-check"></i>
+            <span class="nav-link-text" data-i18n="nav.gestion_actividades_actividades">Actividades</span>
+        </a>
+    </li>
 {% endif %}
 
