--- a/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/index.html
@@ -65,7 +65,7 @@
                                                         <td>{{ consecutivo.tema }}</td>
                                                         <td>{{ consecutivo.descripcion }}</td>
                                                         <td>{{ consecutivo.usuario_crea.username }}</td>
-                                                        <td>{{ consecutivo.fecha_creacion | date:'Y-m-d' }}</td>
+                                                        <td>{{ consecutivo.fecha_creacion | date:'Y-m-d H:i' }}</td>
                                                         <td>{% if consecutivo.justificacion %}{{ consecutivo.justificacion }}{% endif %}</td>
                                                         <td>{% if consecutivo.justificacion %}{{ consecutivo.fecha_modificacion  | date:'Y-m-d H:i'}}{% endif %}</td>
                                                         <td>
