EVA-235 refactor: Se corrige el label para que diga fecha de creación.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/index.html
@@ -49,7 +49,7 @@
                                                     <th class="min-tablet-l">Descripción</th>
                                                     <th class="none">Usuario</th>
                                                     <th class="none">Motivo Editar/Anular</th>
-                                                    <th class="none">Fecha Creación</th>
+                                                    <th class="none">Fecha de Creación</th>
                                                     <th class="min-desktop">Estado</th>
                                                     <th data-priority="2">Acción</th>
                                                 </tr>
