--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoPlanTrabajo/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoPlanTrabajo/index.html
@@ -45,7 +45,7 @@
                                             <thead class="bg-primary-600">
                                                 <tr>
                                                     <th data-priority="1" >Código</th>
-                                                    <th>Fecha</th>
+                                                    <th>Fecha de Creación</th>
                                                     <th class="desktop">Contrato</th>
                                                     <th class="min-tablet-l">Descripción</th>
                                                     <th class="none">Usuario</th>
