--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -46,7 +46,7 @@
                                             <thead class="bg-primary-600">
                                                 <tr>
                                                     <th data-priority="1" >Código</th>
-                                                    <th>Fecha</th>
+                                                    <th>Fecha de Creación</th>
                                                     <th class="desktop">Contrato</th>
                                                     <th class="min-tablet-l">Detalle</th>
                                                     <th class="min-tablet-l">Destinatario</th>
