--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOrdenesTrabajo/index.html
@@ -53,6 +53,7 @@
                                                     <th class="min-tablet-l">Descripción</th>
                                                     <th class="none">Usuario</th>
                                                     <th class="none">Motivo Editar/Anular</th>
+                                                    <th class="none">Fecha de Creación</th>
                                                     <th class="min-desktop">Estado</th>
                                                     <th data-priority="2">Acción</th>
                                                 </tr>
@@ -87,6 +88,7 @@
                                                                 <span class="badge badge-secondary">Anulado</span>
                                                             {% endif %}
                                                         </td>
+
                                                         <td>
                                                             {% if perms.GestionDocumental.change_ordenestrabajo and consecutivo.estado %}
                                                               <a class="fad fa-2x fa-file-edit" id="editar_{{ consecutivo.id }}" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-ordenestrabajo-editar' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
