EVA-237 fix: modificaciones en el view, template y Js de las actividades. modificaciones en el modelo de Actividades.
-Modificación de la URL en el Dropzone del Js de actividades para cargar los soportes.
-Corrección de view VerSoportes, colocando la el tipo de extension del archivo que faltaba. Se coloco tambien un try/except para el error de los archivos que no se encuentren.
-Colocar en el view de editar actividad el campo de horas invertidas que faltaba.
-colocar el dato actividad.soporte_requerido en el diccionario del modelo Actividad.

--- a/GestionActividades/templates/GestionActividades/Actividades/Index.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/Index.html
@@ -259,7 +259,7 @@
                                                                                             <small>
                                                                                                 <div class="d-block p-2 text-muted fs-sm">
                                                                                                     {{ archivo.archivo }}
-                                                                                                    <a class="fas fa-1x fa-download" style="text-decoration: none !important;" href="{% url 'GestionActividades:soportes-ver' actividad.id archivo.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title=""></a>
+                                                                                                    <a class="fas fa-1x fa-download" style="text-decoration: none !important;" href="{% url 'GestionActividades:soportes-ver' actividad.id archivo.id %}" target="_blank" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title=""></a>
                                                                                                 </div>
                                                                                             </small>
                                                                                     {% endif %}
